<resources>
    <string name="app_name">Bilim-Orda Hotel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_guest">Add Guest</string>
    <string name="guest">Guest</string>
    <string name="add">Add</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="individual">Individual identification number (IIN)</string>

</resources>
