<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient_color"
    >
    <ImageView
        android:id="@+id/en_ic"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:src="@drawable/english_ic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
         />
    <TextView
        android:id="@+id/bilim_orda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="145dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/login_input_bg"
        app:layout_constraintTop_toBottomOf="@+id/bilim_orda"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="14dp"
        android:layout_marginTop="90dp"
        />
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/login_input_bg"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="14dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button_bg"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="14dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        android:elevation="4dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>